--- a/peter/my-nextjs-app/package.json
+++ b/peter/my-nextjs-app/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -19,6 +20,7 @@
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
+    "react-resizable-panels": "^2.1.4",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
