--- a/steven/resumable-uploader/package.json
+++ b/steven/resumable-uploader/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.658.1",
     "@aws-sdk/lib-storage": "^3.658.1",
+    "@aws-sdk/s3-request-presigner": "^3.658.1",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18"
