--- a/steven/resumable-uploader/package.json
+++ b/steven/resumable-uploader/package.json
@@ -12,6 +12,8 @@
     "@aws-sdk/client-s3": "^3.658.1",
     "@aws-sdk/lib-storage": "^3.658.1",
     "@aws-sdk/s3-request-presigner": "^3.658.1",
+    "crypto-js": "^4.2.0",
+    "mysql2": "^3.11.3",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18"
